ribbit/tests/ui/mismatch_nonzero.stderr
error[E0277]: the trait bound `APacked: ribbit::NonZero` is not satisfied
 --> tests/ui/mismatch_nonzero.rs:9:8
  |
9 |     a: A,
  |        ^ the trait `ribbit::NonZero` is not implemented for `APacked`
  |
  = help: the following other types implement trait `ribbit::NonZero`:
            std::num::NonZero<i128>
            std::num::NonZero<i16>
            std::num::NonZero<i32>
            std::num::NonZero<i64>
            std::num::NonZero<i8>
            std::num::NonZero<u128>
            std::num::NonZero<u16>
            std::num::NonZero<u32>
          and $N others
note: required by a bound in `assert_nonzero`
 --> src/lib.rs
  |
  |     pub const fn assert_nonzero<T>()
  |                  -------------- required by a bound in this function
...
  |         T::Packed: crate::NonZero,
  |                    ^^^^^^^^^^^^^^ required by this bound in `assert_nonzero`
